--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -128,19 +128,19 @@ Cores atuais:
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3.5rem 0 3rem 0;
+    padding: 3.5rem 0 4rem 0;
     transform: translateY(-1px);
     color: white;
     background: linear-gradient(180deg, #061a50, #030f31);
     text-align: center;
 
-    .title {
+    .titulo {
         font-size: 2.2rem;
         margin: 0;
         font-weight: 700;
     }
     
-    .subtitle {
+    .subtitulo {
         font-size: 1.1rem;
         opacity: 0.8;
         margin: .8rem 0 .5rem 0;
@@ -631,26 +631,65 @@ Cores atuais:
     }
 }
 
-@media (min-width: 768px) {   
-    .etapa{
-        flex-direction: row;
+@media (min-width: 768px) {
+    .icon-container .icon-logo{
+        width: 4rem;
+    }
+
+    .icon-container .icon-nome{
+        width: 13rem;
     }
 
     .head .slide .head-titulos .texto-primario{
         font-size: 3rem;
         font-weight: 700;
     }
-
+    
     .head .slide .head-titulos .texto-secundario{
         font-size: 1.3rem;
+        padding-right: 10%;
     }
 
     .head .slide .head-titulos .texto-invertido{
         padding-left: 5rem;
     }
+    
+    .consultas .titulo{
+        font-size: 3rem;
+        margin: 2rem 0 0 0;
+    }
 
     .consultas .topic {
         margin: 3rem 0 1rem 0;
     }
+    
+    .consultas .oculto-container .etapas-container{
+        max-width: none;
+    }
+    
+    .consultas .oculto-container .etapas-container .etapa{
+        width: 80%;
+        flex-direction: row;
+    }
 
+    .consultas .oculto-container .etapas-container .etapa .etapa-texto{
+        width: 50%;
+        padding-left: 2rem;
+    }
+
+    .consultas .oculto-container .etapas-container .etapa .etapa-texto .etapa-header .numero{
+        font-size: 2.5rem;
+    }
+
+    .consultas .oculto-container .etapas-container .etapa .etapa-texto .etapa-header .titulo{
+        font-size: 2.2rem;
+    }
+
+    .consultas .oculto-container .etapas-container .etapa .etapa-texto .descricao{
+        font-size: 1.3rem;
+    }
+
+    .consultas .oculto-container .etapas-container .etapa .etapa-img{
+        height: 400px;
+    }
 }
