--- a/recursos/style.css
+++ b/recursos/style.css
@@ -45,6 +45,15 @@ Cores atuais:
   padding: 0;
   background-color: #061a50;
 }
+.head .seta {
+  grid-area: pilha;
+  justify-self: end;
+  align-self: end;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  width: 52%;
+  animation: balanco-seta 2.5s ease-in-out infinite;
+}
 .head .slide-fixo {
   grid-area: pilha;
   width: 100%;
@@ -562,6 +571,9 @@ Cores atuais:
   .icon-container .icon-nome {
     width: 13rem;
   }
+  .head .seta {
+    font-size: 2rem;
+  }
   .head .slide .head-titulos .texto-primario {
     font-size: 3rem;
     font-weight: 700;
@@ -602,6 +614,17 @@ Cores atuais:
   }
   .consultas .oculto-container .etapas-container .etapa .etapa-img {
     height: 400px;
+  }
+}
+@keyframes balanco-seta {
+  0% {
+    transform: translateX(-5%); /* Posição original */
+  }
+  50% {
+    transform: translateX(15%); /* Vai um pouquinho pra direita */
+  }
+  100% {
+    transform: translateX(-5%); /* Volta */
   }
 }
 
