--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -46,14 +46,23 @@ Cores atuais:
     padding: 0;
     background-color: #061a50;
 
-    .seta{
+    .seta-passar{
         grid-area: pilha;
         justify-self: end;
         align-self: end;
         color: rgb(255, 255, 255);
         font-size: 1rem;
-        width: 52%;
-        animation: balanco-seta 2.5s ease-in-out infinite;
+        width: 25%;
+    }
+    
+    .seta-voltar{
+        grid-area: pilha;
+        justify-self: end;
+        align-self: end;
+        color: rgb(255, 255, 255);
+        font-size: 1rem;
+        width: 25%;
+        margin-right: 25%;
     }
     
     .slide-fixo{
@@ -132,7 +141,6 @@ Cores atuais:
         display: flex;
     }
 }
-
 
 .consultas {
     display: flex;
@@ -237,6 +245,69 @@ Cores atuais:
         }
     }
 
+    .etapas-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.8rem;
+        width: 100%;        
+        padding-top: 1rem;
+        max-width: 800px;
+
+        .etapa {
+            width: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            border: #e0e0e0 1px solid;
+            border-radius: 1rem;
+            padding-top: 1rem;
+
+            .etapa-texto{
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                width: 90%;
+
+                .etapa-header {
+                    display: flex;
+                    align-items: baseline;
+                    gap: 8px;
+
+                    .numero {
+                        font-size: 1.6rem;
+                        font-weight: 800;
+                        color: #ffcc00;
+                        opacity: 0.8;
+                        line-height: 1;
+                    }
+
+                    .titulo {
+                        font-size: 1.6rem;
+                        color: #fff;
+                        margin: 0;
+                        font-weight: 700;
+                    }
+                }
+
+                .descricao {
+                    font-size: 1rem;
+                    color: #eee;
+                    text-align: justify;
+                    line-height: 1.4;
+                    margin: 0;
+                }
+            }
+
+            .etapa-img {
+                height: 250px;
+                object-fit: cover;
+                margin-top: 0.5rem;
+            }
+        }
+    }
+
     .info-container {
         display: flex;
         gap: 2rem;
@@ -275,68 +346,6 @@ Cores atuais:
         width: 100%;
         padding: 0;
         margin: 0;
-        
-        .etapas-container {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            gap: 1.8rem;
-            width: 100%;
-            max-width: 800px;
-
-            .etapa {
-                width: 90%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
-                border: #e0e0e0 1px solid;
-                border-radius: 1rem;
-                padding-top: 1rem;
-
-                .etapa-texto{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 1rem;
-                    width: 90%;
-
-                    .etapa-header {
-                        display: flex;
-                        align-items: baseline;
-                        gap: 8px;
-    
-                        .numero {
-                            font-size: 1.6rem;
-                            font-weight: 800;
-                            color: #ffcc00;
-                            opacity: 0.8;
-                            line-height: 1;
-                        }
-    
-                        .titulo {
-                            font-size: 1.6rem;
-                            color: #fff;
-                            margin: 0;
-                            font-weight: 700;
-                        }
-                    }
-    
-                    .descricao {
-                        font-size: 1rem;
-                        color: #eee;
-                        text-align: justify;
-                        line-height: 1.4;
-                        margin: 0;
-                    }
-                }
-
-                .etapa-img {
-                    height: 250px;
-                    object-fit: cover;
-                    margin-top: 0.5rem;
-                }
-            }
-        }
 
         .localizacao-container{
             display: none;
@@ -424,7 +433,7 @@ Cores atuais:
 .agendamento {
     background-color: white;
     padding: 3rem 0;
-    display: flex;
+    display: none;
     justify-content: center;
 
     .agendamento-content {
@@ -535,11 +544,19 @@ Cores atuais:
     }
 }
 
+.ativo-agendamento {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .rodape {
-    background: linear-gradient(to top, #030f31, #061a50,);
+    background: linear-gradient(to bottom, #030f31, #061a50,);
     color: #c2d8f5;
     padding: 2rem 1rem 1rem 1rem;
     font-size: 0.9rem;
+    transform: translateY(-2px);
+
 
     .rodape-container {
         max-width: 1200px;
@@ -566,7 +583,8 @@ Cores atuais:
             }
     
             .crn {
-                color: #ffcc00; /* Destaque para o registro profissional */
+                opacity: 0;
+                color: #ffcc00;
                 font-weight: 600;
                 margin-bottom: 1rem;
             }
@@ -678,33 +696,33 @@ Cores atuais:
         margin: 3rem 0 1rem 0;
     }
     
-    .consultas .oculto-container .etapas-container{
+    .consultas .etapas-container{
         max-width: none;
     }
     
-    .consultas .oculto-container .etapas-container .etapa{
+    .consultas .etapas-container .etapa{
         width: 80%;
         flex-direction: row;
     }
 
-    .consultas .oculto-container .etapas-container .etapa .etapa-texto{
+    .consultas .etapas-container .etapa .etapa-texto{
         width: 50%;
         padding-left: 2rem;
     }
 
-    .consultas .oculto-container .etapas-container .etapa .etapa-texto .etapa-header .numero{
+    .consultas .etapas-container .etapa .etapa-texto .etapa-header .numero{
         font-size: 2.5rem;
     }
 
-    .consultas .oculto-container .etapas-container .etapa .etapa-texto .etapa-header .titulo{
+    .consultas .etapas-container .etapa .etapa-texto .etapa-header .titulo{
         font-size: 2.2rem;
     }
 
-    .consultas .oculto-container .etapas-container .etapa .etapa-texto .descricao{
+    .consultas .etapas-container .etapa .etapa-texto .descricao{
         font-size: 1.3rem;
     }
 
-    .consultas .oculto-container .etapas-container .etapa .etapa-img{
+    .consultas .etapas-container .etapa .etapa-img{
         height: 400px;
     }
 }
