--- a/recursos/style.scss
+++ b/recursos/style.scss
@@ -583,7 +583,7 @@ Cores atuais:
             }
     
             .crn {
-                opacity: 0;
+                display: none;
                 color: #ffcc00;
                 font-weight: 600;
                 margin-bottom: 1rem;
