--- a/recursos/style.css
+++ b/recursos/style.css
@@ -239,6 +239,8 @@ Cores atuais:
   border: #e0e0e0 1px solid;
   border-radius: 1rem;
   padding-top: 1rem;
+  background-color: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(10px);
 }
 .consultas .etapas-container .etapa .etapa-texto {
   display: flex;
@@ -632,6 +634,11 @@ Cores atuais:
   }
   .consultas .etapas-container .etapa .etapa-img {
     height: 400px;
+  }
+}
+@media (min-width: 1600px) {
+  .consultas .etapas-container .etapa .etapa-img {
+    height: 600px;
   }
 }
 @keyframes balanco-seta {
